[metadata]
name = climan
version = attr: climan.__version__
url = https://github.com/smartlegionlab/climan/
author = A.A Suvorov
author_email = smartlegiondev@gmail.com
description = Cross-platform config and manager for click console utilities.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/smartlegionlab/climan/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/climan/releases
keywords =
    climan
    click
    click manager

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click ~= 8.0.1

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py